# llm-engineering-journey

./: .gitignore  LICENSE.txt  README.md
week-01-mlp-trainer/: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
week-01-mlp-trainer/notebooks/: 01_logistic_and_softmax_regression.ipynb  02_mlp_classification_covertype.ipynb  02_mlp_covertype_dataset_classification.ipynb  03-mlp-classification-covertype-optuna.ipynb
week-01-mlp-trainer/src/mlp_trainer/: cli.py  data_processing.py  model.py  trainer.py
week-02-transformer-from-scratch/: README.md  main.py  pyproject.toml
week-02-transformer-from-scratch/notebooks/: exploration.ipynb
week-02-transformer-from-scratch/src/transformer/: attention.py  classifier.py  data.py  encoder.py  positional.py  train.py
week-02-transformer-from-scratch/tests/: attention.py  conftest.py  test_attention.py  test_encoder_positional.py
week-03-llm-inference-cli/: DESIGN.md  README.md  pyproject.toml
week-03-llm-inference-cli/configs/: default_config.json
week-03-llm-inference-cli/src/llm_cli/: cli.py  compare.py  config.py  generate.py
week-03-llm-inference-cli/tests/: test_cli.py  test_config.py
week-04-arxiv-qa-dataset/: .env.example  DESIGN.md  README.md  main.py  push_to_hub.py  pyproject.toml
week-04-arxiv-qa-dataset/configs/: pipeline_config.json  prompt.txt
week-04-arxiv-qa-dataset/notebook/: qa-generator-1.ipynb
week-04-arxiv-qa-dataset/src/: cleaner.py  generator.py  quality_filter.py  scraper.py
week-04-arxiv-qa-dataset/tests/: test_cleaner.py  test_quality_filter.py
week-05-sft-experiment/: DESIGN.md  POSTMORTEM.md  README.md  main.py  pyproject.toml
week-05-sft-experiment/configs/: baseline_eval_config.json
week-05-sft-experiment/eval/: qualitative_rubric.md
week-05-sft-experiment/scripts/: main.py
week-05-sft-experiment/tests/: test_env.py
