[project]
name = "week-01-mlp-trainer"
version = "0.1.0"
description = "Simple MLP trainer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.3",
]

[dependency-groups]
dev = ["mypy>=1.19.1", "pre-commit>=4.5.1", "pytest>=9.0.2", "ruff>=0.15.8"]
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

#[tool.mypy]
#python_version = "3.10"
#warn_return_any = true
#warn_unused_configs = true
#ignore_missing_imports = false
#strict_optional = true
