[project]
name = "week-02-transformer-from-scratch"
version = "0.1.0"
description = "transformer implementation from scratch"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.4",
    "matplotlib>=3.10.8",
    "torch>=2.11.0",
    "torchmetrics>=1.9.0",
    "transformers>=5.5.0",
    "typer>=0.24.1",
]

[dependency-groups]
dev = ["mypy>=1.20.0", "pre-commit>=4.5.1", "pytest>=9.0.2", "ruff>=0.15.9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transformer"]
