[project]
name = "llm-inference-cli"
version = "0.1.0"
description = "llm inference cli"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "rich>=15.0.0",
    "torch>=2.11.0",
    "transformers>=5.5.3",
    "typer>=0.24.1",
]

[dependency-groups]
dev = ["mypy>=1.20.0", "pytest>=9.0.3", "ruff>=0.15.10"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_cli"]

[project.scripts]
llm-cli = "llm_cli.cli:app"