[project]
name = "week-04-arxiv-qa-dataset"
version = "0.1.0"
description = "Arxiv-qa-dataset"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=4.0.0",
    "comet-ml>=3.58.0",
    "datasets>=4.8.5",
    "huggingface-hub>=1.15.0",
    "opik>=2.0.47",
    "transformers>=5.8.1",
]
